established DB connection & setup all objects related tables

--- a/VenueApplication/VenueApplication.csproj
+++ b/VenueApplication/VenueApplication.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\NewFolder\**" />
+    <EmbeddedResource Remove="Models\NewFolder\**" />
+    <None Remove="Models\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Npgsql" Version="9.0.1" />
   </ItemGroup>
 
